trying to fix blog on iphone

--- a/css/fi.css
+++ b/css/fi.css
@@ -524,8 +524,8 @@ h2#logo2{
 
 
 
-@media only screen and (max-device-width: 480px) {
-/*@media only screen and (max-width: 480px) {*/
+/*@media only screen and (max-device-width: 480px) {*/
+@media only screen and (max-width: 480px) {
     /* insert styles here */
     .desktop-only{
         display:none;
@@ -541,6 +541,9 @@ h2#logo2{
         position: relative !important;
         display: block;
         width: 100%;
+    }
+    body.blog #nav{
+        margin-top:0px;
     }
     #nav ul{
         margin: 0;
